fix img and audio filename error.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
             this.load.image('ground', 'img/platform.png');
             this.load.image('red', 'img/red.png');
             this.load.image('sky', 'img/space3.png');
-            this.load.image('logo', 'img/stone.png');
             this.load.image('apple', 'img/apple.png');
             this.load.image('mango', 'img/mango.png');
             this.load.image('lemon', 'img/lemon.png');
@@ -113,8 +112,8 @@
             this.load.audio('fishaudio', 'audio/fish.mp3');
             this.load.audio('correct', 'audio/crrect_answer3.mp3');
             this.load.audio('error', 'audio/blip03.mp3');
-            this.load.audio('victory', 'audio/victory.mp3');
-            this.load.audio('fail', 'audio/fail.mp3');
+            this.load.audio('victory', 'audio/Victory.mp3');
+            this.load.audio('fail', 'audio/Fail.mp3');
             this.load.audio('destruction', 'audio/destruction1.mp3');
 
 
